Add buildspec.yaml for CodeBuild ECR Docker pipeline

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,6 @@ env:
   variables:
     ECR_REPOSITORY_URI: "343722280420.dkr.ecr.us-east-1.amazonaws.com/coworking-analytics-repo"
     IMAGE_NAME: "coworking-analytics"
-    IMAGE_TAG: "1"
     DOCKERFILE_PATH: "./analytics"
 
 phases:
@@ -12,18 +11,21 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
-      - echo Starting build...
+      - echo Pre-build complete.
 
   build:
     commands:
       - echo Building Docker image...
       - docker build -t $IMAGE_NAME $DOCKERFILE_PATH
-      - docker tag $IMAGE_NAME:latest $ECR_REPOSITORY_URI:$IMAGE_TAG
+      - echo Tagging image with build number $CODEBUILD_BUILD_NUMBER and 'latest'...
+      - docker tag $IMAGE_NAME:latest $ECR_REPOSITORY_URI:$CODEBUILD_BUILD_NUMBER
+      - docker tag $IMAGE_NAME:latest $ECR_REPOSITORY_URI:latest
 
   post_build:
     commands:
-      - echo Pushing Docker image to ECR...
-      - docker push $ECR_REPOSITORY_URI:$IMAGE_TAG
+      - echo Pushing Docker images to ECR...
+      - docker push $ECR_REPOSITORY_URI:$CODEBUILD_BUILD_NUMBER
+      - docker push $ECR_REPOSITORY_URI:latest
       - echo Build and push complete.
 
 artifacts:
