Add buildspec.yaml for CodeBuild ECR Docker pipeline

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,22 +10,20 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 343722280420.dkr.ecr.us-east-1.amazonaws.com/coworking-analytics-repo
-      - echo Pre-build complete.
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
+      - echo Pre-build completed.
 
   build:
     commands:
       - echo Building Docker image...
       - docker build -t $IMAGE_NAME $DOCKERFILE_PATH
-      - echo Tagging image with build number $CODEBUILD_BUILD_NUMBER and 'latest'...
+      - echo Tagging image with build number $CODEBUILD_BUILD_NUMBER...
       - docker tag $IMAGE_NAME:latest $ECR_REPOSITORY_URI:$CODEBUILD_BUILD_NUMBER
-      - docker tag $IMAGE_NAME:latest $ECR_REPOSITORY_URI:latest
 
   post_build:
     commands:
-      - echo Pushing Docker images to ECR...
+      - echo Pushing Docker image to ECR...
       - docker push $ECR_REPOSITORY_URI:$CODEBUILD_BUILD_NUMBER
-      - docker push $ECR_REPOSITORY_URI:latest
       - echo Build and push complete.
 
 artifacts:
